# BlackBox

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  OVERNIGHT_BATCH.md  README.md  SCOPE_FREEZE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
bench/: README.md  cases.yaml
black-box-bench/: README.md
config/: sanitizer_allowlist.yaml
data/: costs.jsonl
demo_assets/: INDEX.md  bench_repo.txt
docs/: CI_GATES_TODO.md  CLAIMS.md  DEMO_SCRIPT.md  FLAG_PLANT.md  INJECTION_AUDIT.md  MANAGED_AGENTS_MEMORY.md  MEMORY_PROMOTION_PIPELINE.md  MEMORY_STACK.md  NATIVE_INFRA_PROOF.md  ONBOARDING.md  OPUS47_DELTA.md  PITCH.md  REHEARSAL.md  REPRO_SANFER_TELEMETRY_ONLY.md  RISKS.md  ROLES.md  SMOKE_TEST.md  SUBMISSION.md  TESTIMONIAL.md  UI_DESIGN_BRIEF.md
scripts/: NAO6_CAPTURE_GUIDE.md  README.md  _ui_dark.py  analyze_bag.py  analyze_bag_v2.py  archive_old_case_memory_stores.py  bag_duration.py  bench_context_mode.py  build_bag_timelapse.py  build_boat_traffic_plot.py  build_breadth_montage.py  build_final_demo.sh  build_final_video.sh  build_final_video_v2.sh  build_grounding_gate_demo.py  build_layout_safe_panels.py  build_multicam_composite.py  build_opus47_panel.py  build_refutation_card.py  build_sanfer_timelapse.py  build_visual_mining_v2_grid.py  capture_nao6.py  capture_screenshots.py  compare_opus_models.py  compare_opus_vision.py  compose_demo.sh  compose_demo_v1_nopad.sh  compose_demo_v2_xfade.sh  compose_demo_v3_nopad_xfade.sh  compose_demo_v4_xfade_exp.sh  cost_report.py  delete_case_memory_store.py  download_sample_bag.py  end_to_end_smoke.py  exercise_steering_live.py  export_memory_versions.py  extract_hires.py  extract_sanfer_cam.py  extract_sanfer_cam_smart.py  extract_session_frames.py  (+50 more)
tests/: test_analysis.py  test_asciicast_recorder.py  test_auth_gate.py  test_batch.py  test_bench_runners.py  test_canonical_live_default.py  test_checkpoint.py  test_claude_payload.py  test_client_factory.py  test_context_hygiene.py  test_context_mode.py  test_cost_report.py  test_eval.py  test_evidence_trace.py  test_grounding.py  test_grounding_gate.py  test_grounding_gate_clean_recording_demo.py  test_hitl_decisions.py  test_ingestion.py  test_injection_defense.py  test_injection_segregation.py  test_managed_agent.py  test_managed_memory_smoke.py  test_memory.py  test_memory_cli.py  test_memory_loop_demo.py  (+33 more)
(+289 files in other folders)
